# QuickChat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: common.ini
protos/: message.proto
scripts/: format_code.py  start_all.sh  stop_all.sh
server/GateServer/: CMakeLists.txt  main.cpp
server/GateServer/include/: HttpConnection.h  LogicSystem.h  Singleton.h  VerifyGrpcClient.h  const.h
server/GateServer/src/: HttpConnection.cpp  LogicSystem.cpp  VerifyGrpcClient.cpp
servers/: CMakeLists.txt
servers/ChatServer/: CMakeLists.txt
servers/ChatServer/include/: CServer.h  CSession.h  LogicSystem.h  MsgNode.h  UserMgr.h
servers/ChatServer/src/: CServer.cpp  CSession.cpp  LogicSystem.cpp  MsgNode.cpp  UserMgr.cpp  main.cpp
servers/GateServer/: CMakeLists.txt
servers/GateServer/include/: CServer.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  StatusGrpcClient.h  VerifyGrpcClient.h
servers/GateServer/src/: CServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp  main.cpp
servers/StatusServer/: CMakeLists.txt
servers/StatusServer/include/: StatusServiceImpl.h
servers/StatusServer/src/: StatusServiceImpl.cpp  main.cpp
servers/VerifyServer/: client.py  common.ini  pyproject.toml  verify_server.py
servers/common/: CMakeLists.txt
servers/common/include/: AsioIOServicePool.h  ConfigMgr.h  MysqlDao.h  MysqlMgr.h  RPConPool.h  RedisMgr.h  Singleton.h  const.h
servers/common/src/: AsioIOServicePool.cpp  ConfigMgr.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp
